# Hammurabi

./: CMakeLists.txt  README.md  main.cpp
Core/Headers/: Core.h  GameFramework.h  InputInfo.h  PlayerStats.h  RoundInfo.h  Saver.h  ValidateInfo.h
Core/Sources/: Core.cpp  GameFramework.cpp  PlayerStats.cpp  RoundInfo.cpp  Saver.cpp
